--- a/xnradmin-web/src/main/webapp/css/style.css
+++ b/xnradmin-web/src/main/webapp/css/style.css
@@ -4,7 +4,7 @@ body{font-size:1.4rem;font-family:'Arial','Helvetica','sans-serif','\5FAE\8F6F\9
 body,h1,h2,h3,p{margin:0;padding:0}
 li,ul{margin:0;padding:0;list-style:none}
 
-.header{background: #5cb85c; width: 100%; color:#fff;  text-align: center; position: relative; }
+.header{background: #629715; width: 100%; color:#fff;  text-align: center; position: relative; }
 .header .titleBox{height: 50px; line-height:50px;font-size: 2rem; }
 .uploadBtn .addIcon{ color: #666;}
 .contentBox{ padding:2rem 1rem; background: #fff; width: 95%; margin:1rem auto; min-height: 500px;}
@@ -12,8 +12,7 @@ li,ul{margin:0;padding:0;list-style:none}
 /* .contentBox h3{ font-size: 2rem;padding:1rem; border-bottom:1px solid #ddd;} */
 .uploadBtn{ border:1px solid #666; padding:2rem;  width: 7rem; height: 6rem; border-radius:5px;font-size: 2rem; text-align:center; margin:1rem 0;}
 .uploadFileInput{ position:absolute; clip:rect(0 0 0 0); }
-.btnBox .btn-default,.btnBox .btn-success{  width: 100%; /* background: #629715;color: #fff; */}
-.btnBox .btn-success{ margin-bottom: 1rem;}
+.btnBox .btn-default{ background: #629715; width: 100%; color: #fff;}
 .contentBox .form-group{min-height: 60px;}
 .showPhotoes{padding:0px 15px;}
 .showPhotoes ul li{ float: left; width: 32%;margin:2px; position:relative;}
@@ -23,6 +22,7 @@ li,ul{margin:0;padding:0;list-style:none}
 .myAccount .glyphicon-user{ font-size: 1.6rem; padding:0.2rem;margin:0.2rem 0.5rem 0 0;}
 .dateEnd{margin-top:1rem;}
 .mt1{margin-top: 1rem;}
+.uploadWrap .form-group{ overflow:hidden;}
 .contentBox .form-group{ padding-bottom: 2rem; border-bottom: 1px solid #f3f3f3;}
 .personalBox .form-group{border-bottom: none;padding-bottom: 1rem;}
 .searchBox{ width: 75%; float: left;}
@@ -39,11 +39,7 @@ li,ul{margin:0;padding:0;list-style:none}
 .circleIcon{ position: absolute; left: -21px; top:2px; background:#666; width: 10px; height: 10px; border-radius: 50%;}
 .uploadImgBox ul li h3{ font-size: 1.4rem; font-weight:bold;}
 .uploadImgList{overflow: hidden;}
-.uploadImgList ul li{ width: 33%; float: left; padding:0.5rem; position: relative; }
+.uploadImgList ul li{ width: 33%; float: left; padding:0.5rem; }
 .planListBox .form-group{padding-bottom: 0; }
 .planListCon{margin: 0px 1rem;}
 .outputDate span{ padding: 0 1rem;}
-
-.planList{ border-bottom: 1px solid #ddd; margin-bottom: 1rem;}
-.d-planList{ background:rgba(250,250,250,0.6); padding: 1rem;margin-bottom: 1rem;}
-.planList h3{ border-bottom: 1px solid #fff;  font-size: 1.6rem; font-weight: bold; padding-bottom: 1rem; margin-bottom: 1rem; background: #f3f3f3;border-radius: 5px 5px 0 0;  height: 30px; line-height: 30px; text-align: center;}
