--- a/xnradmin-web/src/main/webapp/css/front/style.css
+++ b/xnradmin-web/src/main/webapp/css/front/style.css
@@ -2039,14 +2039,18 @@ a.cpns:hover{
 .commentLeft{width: 84%;}
 .commentRight{width: 15%;}
 /*personalCenter*/
-.pSliderBar{width: 20%;padding:1rem 0rem 10rem;background:#f3f3f3;}
-.pSliderBar ul li{margin:.5rem 0;padding:0 0rem;height:3rem;line-height:3rem; text-align: center;}
+.pSliderBar{width: 20%;padding:1rem 0rem 10rem;background:#f8f8f8;border-radius: 6px;}
+.pSliderBar ul:before{background:#e9e8e8;height:1px;content: ""; width: 100%;display: block;}
+.pSliderBar ul:after{background:#fff;height:1px;content: ""; width: 100%;display: block;}
+.pSliderBar ul li{margin:0rem;padding:0 0rem;height:3.5rem;line-height:3.5rem; text-align: center;}
+.pSliderBar ul li:before{background:#fff;height:1px;content: "";width: 100%;display: block;}
+.pSliderBar ul li:after{background:#e9e8e8;height:1px;content: ""; width: 100%;display: block;}
 .pSliderBar ul li.active{background:#629715}
 .pSliderBar ul li.active a{color:#fff; font-weight: bold;}
 .p-content{ width:75%; margin-left:5%;}
 .userInfoBox{padding:1rem;}
 .personalImg{display:block;overflow:hidden;margin:2rem auto 1rem;text-align:center}
-.personalImg img{ width:130px; height:120px; padding:3px; border:1px solid #ddd;}
+.personalImg img{ width:120px; height:120px; padding:3px; border:1px solid #ddd;border-radius: 50%}
 .pSlideNavUl{clear:both;margin-top:2rem;padding:0 0rem}
 .perInfoBox{padding:0 1rem;}
 .perInfoBox p{text-align:center;}
@@ -2092,17 +2096,19 @@ a.cpns:hover{
 .addressList .form-group{margin-bottom:0.5rem}
 .add-address{margin-bottom: 1rem;}
 .editBox{ overflow:hidden; text-align: right;}
-.addressList{ border:1px solid #ddd; padding: 1rem;margin-bottom: 1rem;}
+.addressList{ border:1px solid #f3f3f3; background:#fcfcfc;padding: 1rem;margin-bottom: 1rem;}
 .modal .form-group label{margin-bottom: 6px;}
 .provinceSel,.citySel,.countrySel{ width: 32%; float: left;}
 .provinceSel,.citySel{ margin-right: 0.5rem}
 .selAddressBox{ overflow: hidden;}
 .detailAddress{margin-top:0.5rem;}
-.p-orderList h3{ font-size: 1.2rem; /* border-bottom: 1px solid #ddd; */ padding-bottom: 1rem; margin-bottom: 2rem;}
-.accountBox{/* border:1px solid #ddd;  */padding:2rem 6rem; }
+.p-orderList h3{ font-size: 1.2rem; /* border-bottom: 1px solid #ddd; */ /* padding-bottom: 1rem; */ margin-bottom: 2rem;}
+.accountBox{/* border:1px solid #ddd;  */border:1px solid #f8f8f8;padding:2rem 6rem; background: #fcfcfc; }
 .accountEditBox{text-align: left; padding-left:16%;}
 .accountEditBox .btn-primary{ width:10%;}
-.editList h3.titBox{ font-weight: bold; font-size: 1.6rem;border-bottom: 1px solid #ddd;}
+.editList h3.titBox{ font-weight: bold; font-size: 1.6rem;background:#f9f9f9; padding-top:0.6rem;padding: 0}
+.editList h3 span{border-bottom: 3px solid #629715; display: block; width: 12%;padding:1rem 0  0.6rem 1rem;}
+.noDataBox{ background:url(../images/tips.png) no-repeat; width: 280px; height:200px; text-align: center;padding:4rem 2rem;margin:10rem auto;}
 .editUserInput .saveUserName{ width:10%;padding: 0.6rem 1rem; color:#629715; font-weight: bold;background:none;border:none; }
 .editUserName:hover,.editUserName:visited,.saveUserName:hover,.saveUserName:visited{color:#629715;}
 .editUserName{ padding: 0rem 1rem; color:#629715; font-weight: bold;}
@@ -2537,4 +2543,16 @@ ul.cart-header .cart-pDetail{width: 75%;}
 .codeImgWrap{width: 100%; text-align: center;}
 .codeImgWrap img{ width: 100%;max-width:100%;height: 100%;}
 .videoSortBox{ margin-top: 2rem;}
+
+/*personalCenter*/
+.personalBox{width: 100%;}
+.pSliderBar{width: 100%;padding: 1rem 0rem 1rem;}
+.p-contentBox{ width: 100%;margin-left: 0; margin-top: 1rem;}
+.editList h3 span{width: 30%;}
+.orderList .orderTitCol ul li{width: 100%; min-height: 3rem;border-bottom: 1px solid #f8f8f8}
+.orderList .orderTitCol ul li span{border-bottom: none}
+.orderList .orderTitCol ul li span{padding-top: 0.5rem}
+.orderTitCol ul li{width: 17%;}
+.orderTitCol ul li.ordercol-d{ width: 22%;}
+.addressList .form-control-static{padding-left:15px;}
 }
